# Projet-C-Exia-2014

./: .gitignore  CMakeLists.txt  LICENSE  README.md  S_Cell.h  S_Game.h  S_Player.h  _include.h  clock.h  hanjie.c  hanjie.h  history.c  history.h  main.c  menu.c  utilities.c  utilities.h
doc/: A1-Algorithmique et LangageC-2014-2015-PROJET_Feuille_Avancement_Groupe.doc  Planning & répartition des tâches.xlsx
src/: S_Game.h  _include.h  clock.c  clock.h  hanjie.c  history.c  main.c  menu.c  menu.h  utilities.c  utilities.h
